--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,13 +40,16 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
           git commit -m "Update assets"
 
       - name: Update index
         run: uv run python make_index.py assets.csv --out docs
 
       - name: Commit index
-        run: git commit -m "Update index"
+        run: |
+          git add -A
+          git commit -m "Update index"
 
       - name: Push changes
         run: git push
